# test-faker

./: .test-faker.yaml  Cargo.toml  Cross.toml  Makefile  release.config.js
.cargo/: config.toml
.github/workflows/: build.sh  ci.yaml
scenarios/: sample1.yaml  sample1_output1.json
scripts/: build-docker.sh
src/: config.rs  exec.rs  faker.rs  main.rs  scenario.rs  verifier.rs
src/fakers/: mod.rs
src/fakers/http_server/: server.rs
src/fakers/kafka_consumer/: consumer.rs
src/fakers/kafka_producer/: producer.rs
src/utils/: json.rs  kafka.rs  mod.rs  yaml.rs
src/verifiers/file/: file.rs
